Don't dismiss launcher if swipe up on status area in laptop mode.

Bug: 761588
Change-Id: Ie0dbf0e2a0b0f59f6df08575a67f21496378fb85
Reviewed-on: https://chromium-review.googlesource.com/651073
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: min c <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499992}
Former-commit-id: bc726f37fe751557cef271e6a3276aea27f8344a